# higher-order-unification

./: LICENSE  README.md  explanation.md  higher-order-unification.cabal  stack.yaml
src/: Client.hs  Unification.hs
