name:                higher-order-unification
version:             0.1.0.0
synopsis:            A simple implementation of higher order unification
license:             MIT
license-file:        LICENSE
author:              Danny Gratzer
maintainer:          jozefg@cmu.edu
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


library
  exposed-modules:     Unification
                     , Client
  build-depends:       base >=4 && <5
                     , containers
                     , logict
                     , monad-gen
                     , mtl
  hs-source-dirs:      src
  default-language:    Haskell2010
